# OmniAgentTUI

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_tui/: __main__.py  app.py  data.py  theme.py
agent_tui/widgets/: chat_input.py  chat_view.py  file_modal.py  project_picker.py  settings.py  sidebar.py
