[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tui"
version = "0.1.0"
description = "Terminal User Interface for AI Agent interaction"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.30.0",
    "rich>=13.0.0",
]

[project.scripts]
agent-tui = "agent_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_tui"]

[tool.hatch.build.targets.sdist]
include = ["agent_tui"]
